@@ -288,7 +288,7 @@
 <!ENTITY less-ch6-du "2.9 MB">
 <!ENTITY less-ch6-sbu "less than 0.1 SBU">
 
-<!ENTITY lfs-bootscripts-version "20100124">                 <!-- Scripts depend on this format -->
+<!ENTITY lfs-bootscripts-version "20100529">                 <!-- Scripts depend on this format -->
 <!ENTITY lfs-bootscripts-size "BOOTSCRIPTS-SIZE KB">         <!-- Updated in Makefile -->
 <!ENTITY lfs-bootscripts-url "&downloads-root;lfs-bootscripts-&lfs-bootscripts-version;.tar.bz2">
 <!ENTITY lfs-bootscripts-md5 "BOOTSCRIPTS-MD5SUM">           <!-- Updated in Makefile -->
@@ -513,10 +513,10 @@
 <!ENTITY texinfo-ch6-du "21 MB">
 <!ENTITY texinfo-ch6-sbu "0.3 SBU">
 
-<!ENTITY udev-version "154">
-<!ENTITY udev-size "520 KB">
+<!ENTITY udev-version "156">
+<!ENTITY udev-size "521 KB">
 <!ENTITY udev-url "&kernel;linux/utils/kernel/hotplug/udev-&udev-version;.tar.bz2">
-<!ENTITY udev-md5 "28064e0325050a1eedec4c142da65ea7">
+<!ENTITY udev-md5 "5efef35990dd20d8bb459eaff36d1f88">
 <!ENTITY udev-home "&kernel;linux/utils/kernel/hotplug/udev.html">
 <!ENTITY udev-ch6-du "11.6 MB">
 <!ENTITY udev-ch6-sbu "0.2 SBU">
